# ecppm-2026-du-hellin-fuchs-borrmann

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyrightconfig.json
analysis/: compare_representations.py  data_representation_comparison_report.md  make_paper_figures.py  stats_output.txt  stats_summary.json  targeted.py  targeted_output.txt  trace_effort.py  trace_effort_output.txt
data/questions/: splits.json
pipelines/cypher/: README.md  agent.py  docker-compose.neo4j.yml  pyproject.toml  run.py  system_prompt.jinja2
pipelines/cypher/ifc2neo4j/: .env.example  README.md  __init__.py  ifc_to_graph.py  neo4j_connection.py  neo4j_helper.py  neo4j_model.py  requirements.txt
pipelines/filesystem/: README.md  agent.py  audit_ifc2fs.py  convert_all.py  ifc2fs.py  pyproject.toml  run.py  system_prompt.jinja2
pipelines/ifc/: README.md  agent.py  interpreter.py  prompts.py  pyproject.toml  run.py  run_eval_push_trace.fish  system_prompt.jinja2
pipelines/sql/: README.md  agent.py  convert.py  interpreter.py  prompts.py  pyproject.toml  run.py  run_eval_push_trace.fish  system_prompt.jinja2
results/ifc/fireworks_accounts-fireworks-models-minimax-m2p7_20260416_224612/: config.json  results.csv
results/ifc/minimax_MiniMax-M2.7_20260417_145959/: judged_summary.json  results.csv
results/ifc/minimax_MiniMax-M2.7_20260418_124754/: judged_summary.json  results.csv
results/ifc/minimax_MiniMax-M2.7_20260418_222936/: judged.csv  results.csv
results/ifc/minimax_MiniMax-M2.7_20260419_130804/: judged.csv  judged_summary.json
results/ifc/minimax_MiniMax-M2.7_20260419_212612/: config.json  results.csv
results/ifc/minimax_MiniMax-M2.7_20260420_152228/: config.json  results.csv
results/ifc_filesystem/: v2_minimax_MiniMax-M2.7_20260604_124401_65675.csv  v2_minimax_MiniMax-M2.7_20260604_124401_65675_summary.json
results/ifc_graphdb/: neo4j_v2_minimax_MiniMax-M2.7_20260604_131620_90829.csv  neo4j_v2_minimax_MiniMax-M2.7_20260604_131620_90829_summary.json
results/ifc_ifcopenshell/: v2_minimax_MiniMax-M2.7_20260604_154646.csv  v2_minimax_MiniMax-M2.7_20260604_154646_summary.json
results/ifc_sql/: v2_minimax_MiniMax-M2.7_20260604_215905.csv  v2_minimax_MiniMax-M2.7_20260604_215905_summary.json
results/sql/minimax_MiniMax-M2.7_20260418_223055/: judged_summary.json  results.csv
results/sql/minimax_MiniMax-M2.7_20260419_160647/: config.json  judged.csv  judged_summary.json  results.csv
results/sql/minimax_MiniMax-M2.7_20260420_214136/: config.json  judged.csv
results/sql/minimax_MiniMax-M2.7_20260421_070248/: judged.csv  judged_summary.json
scripts/: download_data.py  merge_results.py  rejudge_errors.py  run_all.sh  run_export.py
shared/: pyproject.toml
shared/eval/: compare_runs.py  evaluate.py  export_compat.py  pyproject.toml
shared/eval/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
shared/eval/baml_src/: answer_verifier.baml  clients.baml  generators.baml  schemas.baml
shared/src/shared/: __init__.py  agent.py  llm.py  push_eval.py  tracing.py
(+20 files in other folders)
