[project]
name = "shared"
version = "0.1.0"
description = "Shared utilities: LLM init, agent runner, tracing, eval"
authors = [
    { name = "Sylvain Hellin", email = "sylvain.hellin@tum.de" },
    { name = "Changyu Du", email = "changyu.du@tum.de" },
]
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.2,<0.6",
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-google-genai",
    "arize-phoenix>=14",
    "openinference-instrumentation-langchain>=0.1.60",
]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
