[project]
name = "cypher"
version = "0.1.0"
description = "Neo4j property-graph pipeline (ifc2neo4j import + DeepAgent with a Cypher tool)"
authors = [
    { name = "Sylvain Hellin", email = "sylvain.hellin@tum.de" },
    { name = "Changyu Du", email = "changyu.du@tum.de" },
]
requires-python = ">=3.12"
dependencies = [
    "shared",
    "deepagents>=0.5.2,<0.6",
    "langchain[openai,anthropic]>=1.2",
    "langchain-google-genai>=4.2",
    "httpx>=0.28",
    "jinja2>=3.1",
    "pandas>=2.2",
    "pydantic>=2",
    "python-dotenv>=1.0",
    "ifcopenshell>=0.8.5",
    "neo4j>=6.1",
    "neomodel>=6.1",
]

[tool.uv.sources]
shared = { path = "../../shared", editable = true }
